--- a/Multisistemas/WebContent/caja/main.xhtml
+++ b/Multisistemas/WebContent/caja/main.xhtml
@@ -8,6 +8,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"/>
 <title>Multisis</title>
 <h:outputStylesheet name="css/template.css"/>
+<h:outputStylesheet name="css/content.css"/>
 </h:head>
 <h:body styleClass="menu-active">
 	<div class="main-header">
@@ -36,7 +37,7 @@
 		</p:panel>
 		
 		<div class="content">
-			<div>
+			<div class="">
 				<!-- 
 				<h:form class="default-form">
 					<p:panelGrid columns="2">
