--- a/Multisistemas/WebContent/index.xhtml
+++ b/Multisistemas/WebContent/index.xhtml
@@ -17,13 +17,13 @@
 			<h:panelGrid id="loginPanel" columns="2" style="margin-bottom: 10px;">
 
 				<h:outputText value="Usuario" styleClass="outLabel"/>
-				<p:inputText id="usuario" value="#{loginBean.usuario}"  autocomplete="off"  redisplay="true"/>
+				<p:inputText id="usuario" value="#{indexBean.user}"  autocomplete="off"  redisplay="true"/>
 
 				<h:outputText value="Contraseña" styleClass="outLabel"/>
-				<p:password id="clave" feedback="false" value="#{loginBean.clave}" autocomplete="off" redisplay="true"/>
+				<p:password id="clave" feedback="false" value="#{indexBean.pass}" autocomplete="off" redisplay="true"/>
 				
 			</h:panelGrid>
-			<p:commandButton value="Ingresar" update="loginForm" ajax="true" style="float:right;"/>
+			<p:commandButton value="Ingresar" actionListener="#{indexBean.login}" update="loginForm" ajax="true" style="float:right;"/>
 		</p:panel>
 		<p:messages closable="true" showDetail="true" showSummary="true" showIcon="true" style="width:360px;margin:0px auto;">
 			<p:autoUpdate/>
